--- a/accounts/templates/accounts/user_profile.html
+++ b/accounts/templates/accounts/user_profile.html
@@ -69,10 +69,10 @@
     <h4 class="card-title d-flex justify-content-between align-items-center">
       XP Activity Log
       <button class="btn btn-sm btn-outline-primary" type="button" data-bs-toggle="collapse" data-bs-target="#xpLogCollapse" aria-expanded="false" aria-controls="xpLogCollapse">
-        Toggle
+        Expand
       </button>
     </h4>
-
+    
     <div class="collapse" id="xpLogCollapse">
       {% if xp_logs %}
         <ul class="list-group mt-3">
@@ -90,5 +90,11 @@
 
   </div>
 </div>
+    
+    <div class="my-3">
+          <a href="{% url 'accounts:activity_feed' %}" class="btn btn-outline-primary">
+            View All User's Activity
+          </a>
+    </div>
 
 {% endblock %}
