--- a/household_main/templates/household_main/index.html
+++ b/household_main/templates/household_main/index.html
@@ -88,7 +88,11 @@
               {% endif %}">
               <div class="card-body d-flex justify-content-between align-items-center">
                 <div>
-                  <strong>{{ forloop.counter }}. {{ entry.user.username }}</strong>
+                <strong>{{ forloop.counter }}.
+                  <a href="{% url 'accounts:user_profile' username=entry.user.username %}" class="text-decoration-none">
+                    {{ entry.user.username }}
+                  </a>
+                </strong>
                 </div>
                 <span class="badge bg-success">${{ entry.earnedLifetime|floatformat:2 }}</span>
               </div>
@@ -118,7 +122,11 @@
               {% endif %}">
               <div class="card-body d-flex justify-content-between align-items-center">
                 <div>
-                  <strong>{{ forloop.counter }}. {{ entry.user.username }}</strong>
+                  <strong>{{ forloop.counter }}.
+                  <a href="{% url 'accounts:user_profile' username=entry.user.username %}" class="text-decoration-none">
+                    {{ entry.user.username }}
+                  </a>
+                </strong>
                 </div>
                 <span class="badge bg-primary">{{ entry.wordsLifetime|intcomma }} words</span>
               </div>
