Hooked up Chore Badges with signals
- Fixed Earned Date on badges on user_profile
- Started working on book badges hook ups

Todo
- Have milestone_type stop reverting to uppermost option in dropdown

--- a/accounts/templates/accounts/user_profile.html
+++ b/accounts/templates/accounts/user_profile.html
@@ -52,7 +52,7 @@
                       <p><strong>Module:</strong> {{ user_badge.badge.module }}</p>
                       <p><strong>Description:</strong> {{ user_badge.badge.description }}</p>
                       <p><strong>Milestone:</strong> {{ user_badge.badge.milestone }}</p>
-                      <p><small>Earned on: {{ user_badge.date_earned|date:"M d, Y" }}</small></p>
+                      <p><small>Earned on: {{ user_badge.awarded_at|date:"M d, Y" }}</small></p>
                     </div>
                     <div class="modal-footer">
                       <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
