Hooked up word_read to badges
- Created badge_progress helpers in books and chores modules
- Almost have badges messages appearing on unlock
- Hookes up books to badges

--- a/accounts/templates/admin/accounts/badge/milestone_field_book_club.html
+++ b/accounts/templates/admin/accounts/badge/milestone_field_book_club.html
@@ -6,6 +6,6 @@
         <option value="{{ book.id }}">{{ book.text }}</option>
       {% endfor %}
     </select>
-    <p class="help">Select a specific book as the milestone</p>
+    <p class="help">Select a specific book tracker as the milestone</p>
   </div>
 </div>
