Found and fixed bug in Chores dropdown
- Bug was in how the badge_dynamic.js was evaluating data. When I set it to json, it correctly grabs book_club data to populate the milestone_type field. This broke the same field for "chores" though as it needed to intercept the data in json. Rewrite Badge_Dynamic.js to interpret both data types
- Changed milestone-options throughout project to milestone_options to conform with django best practices for urls
-Added badge_dynamic.js to gitignore

Next pressing:
- Make it so editing a created badge does not default to uppermost item in milestone_type field. If this happens, user ill unintentionally select rong choice. Can also put message for user to warn them but this is a bad bandaid.

--- a/accounts/templates/admin/accounts/badge/change_form.html
+++ b/accounts/templates/admin/accounts/badge/change_form.html
@@ -3,9 +3,12 @@
 
 {% block extrahead %}
   {{ block.super }}
+  {{ media }}
     <script>
         console.log("✅ Custom change_form.html loaded");
-        window.badgeMilestoneURL = "{% url 'admin:accounts_badge_milestone-options' %}";
+         window.badgeMilestoneInitial = "{{ adminform.form.instance.milestone_type|default:'' }}";
+         window.badgeMilestoneURL = "{% url 'admin:accounts_badge_milestone_options' %}";
+         {#window.badgeMilestoneInitial = "{{ adminform.form.instance.milestone_type|default:'' }}";#}
     </script>
     <script src="{% static 'admin/js/badge_dynamic.js' %}"></script>
 {% endblock %}
