--- a/accounts/templates/admin/accounts/badge/milestone_field_book_club.html
+++ b/accounts/templates/admin/accounts/badge/milestone_field_book_club.html
@@ -1,9 +1,12 @@
+
 <div class="form-row field-milestone_type">
   <div>
     <label for="id_milestone_type" class="required">Books Milestone:</label>
     <select name="milestone_type" class="vSelect" required id="id_milestone_type">
       {% for book in books %}
-        <option value="{{ book.id }}">{{ book.text }}</option>
+        <option value="{{ book.id }}" {% if book.id|stringformat:"s" == initial %}selected{% endif %}>
+            {{ book.text }}
+        </option>
       {% endfor %}
     </select>
     <p class="help">Select a specific book tracker as the milestone</p>
