--- a/accounts/templates/admin/accounts/badge/milestone_field_chores.html
+++ b/accounts/templates/admin/accounts/badge/milestone_field_chores.html
@@ -3,7 +3,9 @@
     <label for="id_milestone_type" class="required">Chore Milestone:</label>
     <select name="milestone_type" class="vSelect" required id="id_milestone_type">
       {% for chore in chores %}
-        <option value="{{ chore.id }}">{{ chore.text }}</option>
+        <option value="{{ chore.id }}" {% if chore.id|stringformat:"s" == initial %}selected{% endif %}>
+          {{ chore.text }}
+        </option>
       {% endfor %}
     </select>
     <p class="help">Select a specific chore as the milestone</p>
