--- a/book_club/templates/book_club/new_book_entry.html
+++ b/book_club/templates/book_club/new_book_entry.html
@@ -1,23 +1,23 @@
 {% extends "household_main/base.html" %}
-
 {% block content %}
 
-  <p><a href="{% url 'book_club:book' book.id %}">{{ book }}</a></p>
+    <p><h4>Add a new entry for {{ book }}:</h4></p>
 
-  <p>Add a new entry:</p>
-    <div>
-        <form action="{% url 'book_club:new_book_entry' book.id %}" method='post'>
-            {% csrf_token %}
-            {{ form.as_div }}
-            <button name='submit'>Completed book entry</button>
-        </form>
-    </div>
-
-    <div>
-{#        <form action="{% url 'book_club:new_book_tracker_entry' book.id %}" method='post'>#}
-{#            {% csrf_token %}#}
-{#            {{ form.as_div }}#}
-        <p><a href="{% url 'book_club:new_book_tracker_entry' book.id %}">{{ "Track Progress" }}</a></p>
-    </div>
+            <ul>
+                <form action="{% url 'book_club:new_book_entry' book.id %}" method='post'>
+                    {% csrf_token %}
+                    {{ form.as_div }}
+                    <button type="button" class="btn btn-lg btn-block btn-outline-primary">Completed {{ book }}?</button>
+                </form>
+            </ul>
+            <ul>
+                <p>Not finished?</p>
+            </ul>
+            <ul>
+                <a class="btn btn-lg btn-block btn-outline-primary" href="{% url 'book_club:new_book_tracker_entry' book.id %}" role="button">Track where you currently are</a>
+            </ul>
+{#            <ul>#}
+{#            <p><a href="{% url 'book_club:book' book.id %}">{{ book }}</a></p>#}
+{#            </ul>#}
 
 {% endblock content %}
