Book Backlog Implemented
- Created book backlog page
- Changed model book field to a foreign key
- Created book update html page
- Hooked up experience points for tracking partial progress

Next steps
- Make it so that books progressed on do not also count as experience points when logging them complete

--- a/book_club/templates/book_club/books_by_category.html
+++ b/book_club/templates/book_club/books_by_category.html
@@ -31,4 +31,6 @@
       <p>No books found :(.</p>
     {% endfor %}
   </div>
+
+      <a class="btn btn-lg btn-block btn-outline-primary" href="{% url 'book_club:book_backlog' %}" role="button">📚 Books Currently In Progress</a>
 {% endblock content %}
