--- a/book_club/templates/book_club/new_book_entry.html
+++ b/book_club/templates/book_club/new_book_entry.html
@@ -2,13 +2,15 @@
 {% block content %}
 
     <p><h4>Add a new entry for {{ book }}:</h4></p>
-
             <ul>
-                <form action="{% url 'book_club:new_book_entry' book.id %}" method='post'>
-                    {% csrf_token %}
-                    {{ form.as_div }}
-                    <button type="button" class="btn btn-lg btn-block btn-outline-primary">Completed {{ book }}?</button>
-                </form>
+            <form action="{% url 'book_club:new_book_entry' book.id %}" method='post'>
+                {% csrf_token %}
+                {{ form.as_div }}
+                <button name='submit' class="btn btn-lg btn-block btn-outline-primary">Completed {{ book }}?</button>
+{#                <button type="button" name="submit" class="btn btn-outline-dark">Completed {{ book }}?</button>#}
+{#                <button type="button" class="btn btn-outline-dark">Completed {{ book }}?</button>#}
+{#                <a class="btn btn-lg btn-block btn-outline-primary" href="#" role="button">Completed {{ book }}?</a>#}
+            </form>
             </ul>
             <ul>
                 <p>Not finished?</p>
